src/main/kotlin/com/example/lottery/util/error/UserNotFoundException.kt
package com.example.lottery.util.error

class UserNotFoundException(message: String? = "user is not found") : RuntimeException(message)
